--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,32 @@
+/*
+    ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
+*/
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background: #fafafa;
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 300;
+  line-height: 1.7em;
+  color: #999;
+}
+
+ul ul a {
+font-size: 0.9em !important;
+padding-left: 30px !important;
+background: #6d7fcc;
+}
+
+a, a:hover, a:focus {
+color: inherit;
+text-decoration: none;
+transition: all 0.3s;
 }
