--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -22,7 +22,7 @@ p {
 ul ul a {
 font-size: 0.9em !important;
 padding-left: 30px !important;
-background: #6d7fcc;
+background: @primary;
 }
 
 a, a:hover, a:focus {
