--- a/src/assets/less/menu.less
+++ b/src/assets/less/menu.less
@@ -56,7 +56,7 @@ a[data-toggle="collapse"] {
     background: #fff;
 }
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
+#sidebar ul li > a.active, a.active[aria-expanded="true"] {
     color: #fff;
     background: #008297;
 }
